# arduin-o-punch

./: .editorconfig  CHANGELOG.md  CHANGELOG.uk.md  LICENSE  README.md  TODO.md
.github/workflows/: build-wa.yml  cmake-multi-platform.yml  compile-sketch.yml  generate-apk.yml
android/: .gitignore  build.gradle  deploy.sh  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
arduino/: .astylerc  .clangd  .gitignore  BOM.md  Bluetooth.cpp  Bluetooth.h  Buzzer.cpp  Buzzer.h  CMakeLists.txt  Context.cpp  Context.h  CpuFreq.cpp  IMifare.h  IndexHtml.cpp  Logger.cpp  Logger.h  Makefile  Network.cpp  Network.h  OutMux.cpp  OutMux.h  Punch.h  PunchCard.cpp  PunchCard.h  PunchCardTest.cpp  PunchTest.cpp  Puncher.cpp  Puncher.h  Shell.cpp  Shell.h  TODO.md  WebUI.cpp  arduino.ino  build.sh  defs.h  favicon.cpp  platformio.ini  serve_wa.py  sketch.yaml
arduino/enclosure/: box.FCStd
arduino/lib/aop/: CMakeLists.txt  ErrorCode.cpp  ErrorCode.h  IMifare.cpp  IMifare.h  Punch.h  PunchCard.cpp  PunchCard.h  PunchCardTest.cpp  Recorder.cpp  Recorder.h  RingBuffer.h  Utils.h  cli.cpp  test.sh
arduino/librepcb/motherboard/: README.md
arduino/librepcb/motherboard/boards/default/: board.lp
arduino/librepcb/motherboard/circuit/: circuit.lp
arduino/librepcb/motherboard/project/: metadata.lp
arduino/librepcb/motherboard/schematics/: schematics.lp
arduino/pcb/aop/: aop.kicad_pcb  aop.kicad_prl  aop.kicad_pro  aop.kicad_sch  fix-gbr-pcb24.sh  fp-lib-table  sym-lib-table
arduino/pcb/aop/lib/: RFID-RC522.kicad_sym
arduino/pcb/aop/lib/AO4435.pretty/: SOIC127P600X175-8N.kicad_mod
arduino/scripts/: ble-serial.py  ble-serial.sh  connection.py  requirements.txt  sync-clock.py
arduino/src/: .clangd  ActivityCounter.cpp  ActivityCounter.h  Bluetooth.cpp  Bluetooth.h  Buzzer.cpp  Buzzer.h  CMakeLists.txt  Context.cpp  Context.h  CpuFreq.cpp  CpuFreq.h  ErrorCode.cpp  ErrorCode.h  IKeyReceiver.h  IMifare.cpp  IMifare.h  Mutex.h  Network.cpp  Network.h  Operation.cpp  Operation.h  OperationMode.h  OutMux.cpp  OutMux.h  Punch.h  PunchCard.cpp  PunchCard.h  PunchCardTest.cpp  PunchTest.cpp  Puncher.cpp  Puncher.h  Recorder.cpp  Recorder.h  RecorderTest.cpp  RingBuffer.h  RingBufferTest.cpp  RtcLog.cpp  RtcLog.h  Settings.cpp  (+12 more)
arduino/wa/: .clangd  .gitignore  aop.cpp  build.sh  index.html
doc/: BOM.md  DESIGN.md  assembly.md  assembly.uk.md  design.md  inventory.md  usage.uk.md
doc/openscad/: mount.scad  station.scad
(+47 files in other folders)
